[build-system]

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
mkdocs = { version = "==1.4.2", optional = true }
mkdocs-material = { version = "==8.5.11", optional = true }
mdx_truly_sane_lists = { version = "1.3", optional = true }

[tool.black]
line-length = 100
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    treeherder/model/migrations
  | treeherder/perf/migrations
  | treeherder/changelog/migrations
)/
'''
