[project]
name = "treeherder"
version = "1.0.0"
description = "Defaut package, used for development or readthedocs"

[project.optional-dependencies]
docs = [
  "mkdocs==1.4.3",
  "mkdocs-material==9.1.18",
  "mdx_truly_sane_lists==1.3",
]

[tool.setuptools]
packages = ["treeherder"]

[build-system]
requires = ["setuptools", "wheel"]
# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
mkdocs = { version = "==1.4.2", optional = true }
mkdocs-material = { version = "==8.5.11", optional = true }
mdx_truly_sane_lists = { version = "1.3", optional = true }

[tool.black]
line-length = 100
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    treeherder/model/migrations
  | treeherder/perf/migrations
  | treeherder/changelog/migrations
)/
'''
