[tool.poetry]
name = "docs-package"
version = "1.0.0"
description = "This is the package installer for docs"
authors = ["Mozilla"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mkdocs = "1.0.4"
mkdocs-material = "4.6.3"
mdx_truly_sane_lists = "1.2"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | ^migrations/
)
'''