[tool.poetry]
name = "misc"
version = "0.1.0"
description = "Miscellanous scripts that can be run outside of the Docker setup."
authors = ["Armen Zambrano G. <armenzg@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.5"
treeherder-client = "^5.0"
slugid = "^2.0"
deepdiff = "^4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
